<resources>
    <string name="app_name">Anime Sama</string>
    <string name="loading">Chargement d\'Anime-Sama…</string>
    <string name="no_internet">Pas de connexion Internet</string>
    <string name="retry">Réessayer</string>
    <string name="go_home">Retour à l\'accueil</string>
    <string name="external_url_not_allowed">🚫 Le domaine \"%1$s\" n\'est pas dans votre liste autorisée.</string>
</resources>
